Remove ;, fix scroll bar on mobile devices

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   padding: 64px 2rem 2rem;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .description {
